# cppUniversityScndYearNew

./: CMakeLists.txt  main.cpp
firstTask/: FirstTask.cpp  FirstTask.h
fourthTask/: FourthTask.cpp  FourthTask.h
secondTask/: SecondTask.cpp  SecondTask.h
thirdTask/: ThirdTask.cpp  ThirdTask.h
